feat: add radix64 processing
