# src/server/server.go
@@ -8,6 +8,24 @@ import (
 	"onepixel_backend/src/routes/api"
 )
 
+// CreateApp creates the fiber app
+// @title						onepixel API
+// @version					0.1
+// @description				1px.li URL Shortner API
+// @termsOfService				https://github.com/championswimmer/onepixel_backend
+// @contact.name				Arnav Gupta
+// @contact.email				dev@championswimmer.in
+// @license.name				MIT
+// @license.url				https://opensource.org/licenses/MIT
+// @host						127.0.0.1:3000
+// @BasePath					/api/v1
+// @securityDefinitions.apiKey	BearerToken
+// @in							header
+// @name						Authorization
+// @securityDefinitions.apiKey	API Key
+// @in header
+// @name X-API-Key
+// @security API Key
 func CreateApp(db *gorm.DB) *fiber.App {
 	app := fiber.New()
 
